# newone

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
infrastructure/: main.tf  variables.tf
tests/: test_newone.py
